--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,48 @@
-# Dependencies
+# Node modules
 node_modules/
+**/node_modules/
 
-# Build output
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+jspm_packages/
+
+# Build outputs
 dist/
+build/
+out/
+.vite/
+.vite_cache/
 
+# Vercel / deployment
+.vercel/
+.vercel_build_output/
 
-# System files
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Mac / Windows system files
 .DS_Store
 Thumbs.db
+
+# IDE / editor folders
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+#  (using Node.js backend)
+*.tsbuildinfo
