--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js"
-    
- },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,7 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "openai": "^6.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
