--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "express-rate-limiter": "^1.3.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "nodemailer": "^6.9.11",
-    "openai": "^6.9.0"
+    "openai": "^6.9.0",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
